<resources>
    <string name="app_name">Mirror</string>
    <string name="login_loginText">账号登录</string>
    <string name="login_phoneNum">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_loginBtn">登录</string>
    <string name="login_create_account">创建账号</string>
    <string name="login_socialLogin_text">使用社交账号</string>
    <string name="login_createAccount_text">创建账号</string>
    <string name="login_captcha_text">验证码</string>
    <string name="login_setPassword_text">设置密码</string>
    <string name="login_sendCaptcha_text">发送验证码</string>
    <string name="goods_share_SlideViewDetails">滑动浏览详情</string>
    <string name="main_text">浏览平光眼镜</string>
    <string name="main_see_text">浏览所有分类</string>
    <string name="main_sun_text">浏览太阳眼镜</string>
    <string name="main_share_text">专题分享</string>
    <string name="main_shop_text">我的购物车</string>
    <string name="main_return_text">返回首页</string>
    <string name="main_exit_text">退出</string>
    <string name="shopping_cart_myShop_textView">我的购物车</string>
    <string name="shopping_cart_new_texts">显示排序为最新推荐</string>
    <string name="shopping_cart_no_text">您的购物车没有商品</string>
    <string name="pop_textView_text">購物車</string>
    <string name="all_type_price_text">450</string>
    <string name="main_bottom_textView_right">登錄</string>
    <string name="pop_return_text">返回首页</string>
    <string name="pop_exit_text">退出</string>
    <string name="activity_details_wear_atlas_text">佩戴图集</string>
    <string name="fragment_all_type_menuText">浏览全部分类</string>
    <string name="fragment_all_type_orderText">显示排序为最新推荐</string>
    <string name="share_details_small_text">巴拉巴拉巴拉</string>
    <string name="share_details_title_text">巴拉巴拉巴拉巴拉</string>
    <string name="share_details_sub_text">巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉巴拉</string>
    <string name="activity_wear_atlas_text">商品细节展示</string>
    <string name="activity_order_details_text">订单详情</string>
    <string name="popwindow_payment_change_text">选择支付方式</string>
    <string name="popwindow_payment_weixin_iv_text">微信支付</string>
    <string name="popwindow_payment_zhifubao_iv_text">支付宝支付</string>
    <string name="activity_address_text">我的所有地址</string>
    <string name="activity_address_btn_text">添加地址</string>
    <string name="address_listView_recipient_text">收件人:</string>
    <string name="address_listView_address_text">地址:</string>
    <string name="main_activity_shoppingCart_text">購物車</string>
    <string name="main_activity_login_text">登錄</string>
    <string name="login_success_text">登陆成功</string>
    <string name="Mirror_token">token</string>
    <string name="GoodsDetails_translationX">translationX</string>
    <string name="GoodsDetails_Mirror">Mirror</string>
    <string name="Login_ifLogin">ifLogin</string>
    <string name="GoodsDetails_name">name</string>
    <string name="GoodsDetails_pic">pic</string>
    <string name="GoodsDetails_content">content</string>
    <string name="GoodsDetails_price">price</string>
    <string name="GoodsDetails_order_id">order_id</string>
    <string name="GoodsDetails_addr_id">addr_id</string>
    <string name="GoodsDetails_id">id</string>
    <string name="GoodsDetails_goods_id">goods_id</string>
    <string name="GoodsDetails_goods_num">goods_num</string>
    <string name="GoodsList_price">price</string>
    <string name="GoodsDetails_discount_id">discout_id</string>
    <string name="GoodsDetails_device_type">device_type</string>
    <string name="GoodsDetails_please_login">请先登录</string>
    <string name="WearAtlasActivity_name">name</string>
    <string name="WearAtlasActivity_pic">pic</string>
    <string name="WearAtlasActivity_content">content</string>
    <string name="WearAtlasActivity_price">price</string>
    <string name="WearAtlasActivity_id">id</string>
    <string name="WearAtlasActivity_locationX">locationX</string>
    <string name="WearAtlasActivity_locationY">locationY</string>
    <string name="WearAtlasActivity_width">width</string>
    <string name="WearAtlasActivity_height">height</string>
    <string name="WearAtlasActivity_position">position</string>
    <string name="WearAtlasActivity_pos">pos</string>
    <string name="CatalogFragment_exit">确定退出登錄</string>
    <string name="CatalogFragment_makesure">确定</string>
    <string name="CatalogFragment_Mirror">Mirror</string>
    <string name="CatalogFragment_ifLogin">ifLogin</string>
    <string name="CatalogFragment_cancel">取消</string>
    <string name="CatalogFragment_position">position</string>
    <string name="MainActivity_scaleX">scaleX</string>
    <string name="CatalogFragment_scaleY">scaleY</string>
    <string name="MainActivity_Mirror">Mirror</string>
    <string name="MainActivity_ifLogin">ifLogin</string>
    <string name="MainActivity_clickQuit">再按一次退出</string>
    <string name="CreateAccountActivity_result">result</string>
    <string name="CreateAccountActivity_msg">msg</string>
    <string name="CreateAccountActivity_inputNum">请输入手机号</string>
    <string name="CreateAccountActivity_result_one">1</string>
    <string name="CreateAccountActivity_phone_number">phone number</string>
    <string name="CreateAccountActivity_number">number</string>
    <string name="CreateAccountActivity_password">password</string>
    <string name="CreateAccountActivity_getAgain">重新获取</string>
    <string name="CreateAccountActivity_second">秒</string>
    <string name="LoginActivity_result">result</string>
    <string name="LoginActivity_msg">msg</string>
    <string name="LoginActivity_success">登陆成功</string>
    <string name="LoginActivity_token">token</string>
    <string name="LoginActivity_data">data</string>
    <string name="LoginActivity_Mirror">Mirror</string>
    <string name="Login_token">token</string>
    <string name="LoginActivity_ifLogin">ifLogin</string>
    <string name="LoginActivity_phone_number">phone number</string>
    <string name="LoginActivity_password">password</string>
    <string name="AddAddressActivity_Mirror">Mirror</string>
    <string name="AddAddressActivity_token">token</string>
    <string name="AddAddressActivity_success">提交成功</string>
    <string name="AddAddressActivity_username">username</string>
    <string name="AddAddressActivity_cellphone">cellphone</string>
    <string name="AddAddressActivity_addr_info">addr_info</string>
    <string name="AddAddressActivity_write">请填写信息</string>
    <string name="AddressActivity_Mirror">Mirror</string>
    <string name="AddressActivity_token">token</string>
    <string name="AddressActivity_device_type">device_type</string>
    <string name="AddressActivity_page">page</string>
    <string name="AddressActivity_last_time">last_time</string>
    <string name="AddressActivity_menu_delete">删除</string>
    <string name="AddressActivity_success">删除成功</string>
    <string name="AddressActivity_addr_id">addr_id</string>
    <string name="AddressActivity_result">result</string>
    <string name="AddressActivity_set_success">设置默认地址成功</string>
    <string name="AddressActivity_name">name</string>
    <string name="AddressActivity_tel">tel</string>
    <string name="AddressActivity_info">info</string>
    <string name="AllFragment_allType">全部分類</string>
    <string name="AllTypeFragment_title">title</string>
    <string name="AllTypeFragment_id">id</string>

</resources>
