<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_account_text_marginTop"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_account_text_marginBottom"
                android:layout_marginLeft="@dimen/create_account_text_marginLeft"
                android:layout_weight="0.95"
                android:text="@string/login_createAccount_text"
                android:textSize="@dimen/create_account_text_textSize"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_account_imageView_marginBottom"
                android:background="@mipmap/close" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:layout_marginRight="@dimen/create_account_imageView_marginRight"
            android:background="@mipmap/login_line" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_num_linearLayout_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:text="@string/login_phoneNum"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_editText_linearLayout_marginTop"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:layout_marginRight="@dimen/create_account_imageView_marginRight"
            android:background="@mipmap/login_phonenum_edittext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_text_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:text="@string/login_captcha_text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_editText_linearLayout_marginTop"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:layout_weight="3"
            android:background="@mipmap/login_phonenum_edittext" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/create_account_imageView_marginRight"
            android:layout_weight="1"
            android:background="@mipmap/login_captcha_button"
            android:text="@string/login_sendCaptcha_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/create_account_btn_textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_text_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:text="@string/login_setPassword_text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_editText_linearLayout_marginTop"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:layout_marginRight="@dimen/create_account_imageView_marginRight"
            android:background="@mipmap/login_phonenum_edittext"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/create_account_createBtn_linearLayout_marginTop"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/create_account_imageView_marginLeft"
            android:layout_marginRight="@dimen/create_account_imageView_marginRight"
            android:background="@mipmap/login_usable_button"
            android:text="@string/login_create_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/create_account_createBtn_textSize" />

    </LinearLayout>


</LinearLayout>
